[package]
name = "nonspacing-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
roaring = "0.10.1"
once_cell = "1.5.2"
sysinfo = "0.26.4"
fst = "0.4"

[[bench]]
name = "structures"
harness = false